--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+<html lang="fr">
+<head>
+    {% block head %}
+
+        <meta name="robots" content="noindex, nofollow">
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+        <meta name="description" content="Cherche une annonce de voiture parmi notre catalogue">
+        <link rel="stylesheet" href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600">
+        <link rel="stylesheet" href="{{ asset('assets/fonts/fontawesome-all.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/fonts/font-awesome.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/fonts/fontawesome5-overrides.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/styles.min.css') }}">
+
+    {% endblock %}
+    <title>{% block title %}Welcome!{% endblock %}</title>
+
+    {% block stylesheets %}{% endblock %}
+</head>
+<body>
+{% include '_navbar.html.twig' %}
+{% block body %}{% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('assets/js/jquery.min.js') }}"></script>
+    <script src="{{ asset('assets/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('assets/js/script.min.js') }}"></script>
+
+{% endblock %}
     </body>
 </html>
+
