Mise en place du filtre - {'make','model'}

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-white navbar-expand-md">
-    <div class="container-fluid"><a class="navbar-brand" href="#"><strong>Logo du site</strong></a>
+    <div class="container"><a class="navbar-brand" href="#"><strong>Logo du site</strong></a>
         <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
                     class="navbar-toggler-icon"></span></button>
         <div
