--- a/templates/front/recherche.twig
+++ b/templates/front/recherche.twig
@@ -4,7 +4,9 @@
 
 {% endblock %}
 {% block title %} Site d'annonces auto {% endblock %}
-
+{% block stylesheets%}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.0.3/nouislider.css">
+{% endblock %}
 {% block body %}
 
     <div class="wrapper">
@@ -44,36 +46,6 @@
                                             class="fas fa-chevron-left mr-3"></i>retour
                                 </button>
                             </div>
-                            {#
-                            <form>
-                                <div class="form-group"><label>Chercher par mot clé</label><input class="form-control"
-                                                                                                  type="text"
-                                                                                                  placeholder="ex : BMW Series 5"
-                                                                                                  name="q"></div>
-                                <div class="form-group"><label>Trouver une marque</label><select class="form-control"
-                                                                                                 name="make">
-                                        <optgroup label="Sélectionner une marque">
-                                            <option value="bmw" selected="">BMW</option>
-                                            <option value="porsche">Porsche</option>
-                                            <option value="renault">Renault</option>
-                                        </optgroup>
-                                    </select></div>
-                                <div
-                                        class="form-group"><label>Trouver un modèle</label><select class="form-control"
-                                                                                                   name="model">
-                                        <optgroup label="Sélectionner une marque">
-                                            <option value="carrera" selected="">Carrera</option>
-                                            <option value="twingo">Twingo</option>
-                                        </optgroup>
-                                    </select></div>
-                                <div
-                                        class="form-group">
-                                    <button class="btn btn-primary btn-block" type="submit"><i
-                                                class="fas fa-search mr-2"></i>chercher
-                                    </button>
-                                </div>
-                            </form>
-                            #}
 
                             {{ form_start(form) }}
                             <div class="form-group">
@@ -85,35 +57,39 @@
                                 {{ form_widget(form.make) }}
                             </div>
                             <div class="form-group">
-                                {{ form_label(form.model, "Recherche par modèle") }}
+                                {{ form_label(form.model, "Recherche par marque") }}
                                 {{ form_widget(form.model) }}
                             </div>
                             <div class="form-group">
                                 <label for="">Chercher par année</label>
+                                <div id="sliderYear" data-min="{{ minYear }}" data-max="{{ maxYear }}"></div>
                                 <div class="d-flex flex-row justify-content-between mt-3">
-                                    {{ form_widget(form.minYear, { 'attr': { 'class': 'form-control mr-1', 'title': "Prix minimum"}}) }}
-                                    {{ form_widget(form.maxYear, { 'attr': { 'class': 'form-control ml-1', 'title': "Prix maximun"}}) }}
+                                    {{ form_widget(form.minYear, { 'attr': { 'class': ' mr-1', 'title': "Année minimum"}}) }}
+                                    {{ form_widget(form.maxYear, { 'attr': { 'class': ' ml-1', 'title': "Année maximun"}}) }}
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="">Chercher par kilométrage</label>
                                 <div class="d-flex flex-row justify-content-between mt-3">
-                                    {{ form_widget(form.minKilometer, { 'attr': { 'class': 'form-control mr-1', 'title': "Kilométrage minimum"}}) }}
-                                    {{ form_widget(form.maxKilometer, { 'attr': { 'class': 'form-control ml-1', 'title': "KIlomètrage maximun"}}) }}
+                                    {{ form_widget(form.minKilometer, { 'attr': { 'class': ' mr-1', 'title': "Kilométrage minimum"}}) }}
+                                    {{ form_widget(form.maxKilometer, { 'attr': { 'class': ' ml-1', 'title': "KIlomètrage maximun"}}) }}
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="">Chercher par prix</label>
+                                <div id="sliderPrice" data-min="{{ minPrice }}" data-max="{{ maxPrice }}"></div>
                                 <div class="d-flex flex-row justify-content-between mt-3">
-                                    {{ form_widget(form.minPrice, { 'attr': { 'class': 'form-control mr-1', 'title': "Année minimum"}}) }}
-                                    {{ form_widget(form.maxPrice, { 'attr': { 'class': 'form-control ml-1', 'title': "Année maximun"}}) }}
+                                    {{ form_widget(form.minPrice, { 'attr': { 'class': ' mr-1 ', 'title': "Année minimum" }}) }}
+                                    {{ form_widget(form.maxPrice, { 'attr': { 'class': ' ml-1', 'title': "Année maximun" }}) }}
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-search mr-2"></i>
                                 Chercher
                             </button>
-                            <input type="reset" class="btn btn-link btn-block" value="Tout effacer"/>
+
                             {{ form_end(form) }}
+
+                            <button type="reset" id="resetForm" class="btn btn-link btn-block">Tout effacer</button>
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-6">
@@ -166,4 +142,82 @@
             </div>
         </div>
     </div>
+
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.0.3/nouislider.js"></script>
+    <script>
+        const sliderPrice = document.getElementById('sliderPrice');
+
+        if (sliderPrice)
+        {
+            minPrice = document.getElementById('minPrice');
+            maxPrice = document.getElementById('maxPrice');
+            const minValuePrice = Math.floor(parseInt(sliderPrice.dataset.min, 10) / 10) * 10;
+            const maxValuePrice = Math.ceil(parseInt(sliderPrice.dataset.max, 10) / 10) * 10;
+            const rangePrice = noUiSlider.create(sliderPrice, {
+                start: [minPrice.value || minValuePrice, maxPrice.value || maxValuePrice],
+                connect: true,
+                step: 100,
+                range: {
+                    'min': minValuePrice,
+                    'max': maxValuePrice
+                }
+
+
+            });
+            rangePrice.on('slide', function (values, handle) {
+                if(handle === 0){
+                    minPrice.value = Math.round(values[0]);
+                }
+                if(handle === 1)
+                {
+                    maxPrice.value = Math.round(values[1]);
+                }
+            })
+
+        }
+
+        const sliderYear = document.getElementById('sliderYear');
+
+        if (sliderYear)
+        {
+            minYear = document.getElementById('minYear');
+            maxYear = document.getElementById('maxYear');
+            const minValueYear = Math.floor(parseInt(sliderYear.dataset.min, 10) / 10) * 10;
+            const maxValueYear = Math.ceil(parseInt(sliderYear.dataset.max, 10) / 10) * 10;
+            const rangeYear = noUiSlider.create(sliderYear, {
+                start: [minYear.value || minValueYear, maxYear.value || maxValueYear],
+                connect: true,
+                step: 1,
+                range: {
+                    'min': minValueYear,
+                    'max': maxValueYear
+                }
+
+
+            });
+            rangeYear.on('slide', function (values, handle) {
+                if(handle === 0){
+                    minYear.value = Math.round(values[0]);
+                }
+                if(handle === 1)
+                {
+                    maxYear.value = Math.round(values[1]);
+                }
+            })
+
+        }
+
+        $reset = $('#resetForm');
+
+        $reset.click(() => {
+            $('form input, form select').each(function () {
+                $(this).val('');
+            })
+        })
+    </script>
+
 {% endblock %}
