--- a/templates/front/recherche.twig
+++ b/templates/front/recherche.twig
@@ -15,7 +15,7 @@
                 <div class="row">
                     <div class="col">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#"><span>Accueil</span></a></li>
+                            <li class="breadcrumb-item"><a href="{{ path('home') }}"><span>Accueil</span></a></li>
                             <li class="breadcrumb-item"><a
                                         href="{{ path('annonces') }}"><span>Chercher une annonce</span></a></li>
                             <li class="breadcrumb-item"><a href="#"
